# PolyCalc

./: .coverage  README.md  polycalc_env.yml  pyproject.toml  requirements.txt
polycalc/: __init__.py  cli.py  gui.py  polinomio.py
polycalc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
testing/: polinomio_unit_test.py
tests/: .coverage
tests/unit/: test_polinomio.py
