[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["polycalc"]

[project]
name = "polycalc"
version = "0.0.1"
authors = [
    { name = "Manuel Meloni", email = "manuel.meloni@edu.unife.it" },
]
description = "Calcolatore di polinomi, dotato di interfaccia grafica."
requires-python = ">=3.10"
dependencies = [
    #TODO aggiungere dipendenzeusate nel progetto!
]

# [project.scripts]
# TODO una volta implementata la gui, questo servirà per avviarla
# polycalc-gui = "main:start_gui"
# TODO una volta implementata la funzione main, questo comando servirà
# ad avviare il programma tramite terminale in modo da poter usare le funzioni 
# in modo versatile da terminale
# polycalc-bash = "main:start_bash_app"