[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["polycalc"]

[project]
name = "polycalc"
version = "0.0.1"
authors = [
    { name = "Manuel Meloni", email = "manuel.meloni@edu.unife.it" },
]
description = "Calcolatore di polinomi, dotato di interfaccia grafica."
requires-python = ">=3.10"
dependencies = [
    #TODO aggiungere dipendenzeusate nel progetto!
]
# TODO
readme = ""
license = {file = ""}
keywords = [""]

[project.scripts]
# TODO una volta implementata lo script gui.py, questo servirà per avviarla
poly_gui = "polycalc.gui:main"
# TODO una volta implementata lo script cli.py , questo comando servirà
# ad avviare il programma tramite terminale in modo da poter usare le funzioni 
poly = "polycalc.cli:start_bash_app"